--- a/client/src/components/workpages/ImagePagesStyle.css
+++ b/client/src/components/workpages/ImagePagesStyle.css
@@ -9,9 +9,11 @@
 .background-page-body {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 .image-card {
-    width: 170px;
+    width: 150px;
     height: 105px;
     margin: 5px;
 }
@@ -63,4 +65,16 @@
     width: '200px';
     height: '150px';
     animation-duration: '2s';
+}
+.loading-spinner {
+    opacity: 0.5;
+    z-index: 9999; 
+    position: fixed; 
+    width: 100%;
+    height: 100%;
+    top: 1vh; 
+    left: 3vw; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 }
