--- a/client/src/components/workpages/ImagePagesStyle.css
+++ b/client/src/components/workpages/ImagePagesStyle.css
@@ -67,7 +67,7 @@
     animation-duration: '2s';
 }
 .loading-spinner {
-    opacity: 0.5;
+    opacity: 1;
     z-index: 9999; 
     position: fixed; 
     width: 100%;
@@ -77,4 +77,47 @@
     display: flex; 
     justify-content: center; 
     align-items: center;
+}
+.upload-page {
+    display: flex;
+    flex-direction: column;
+}
+.upload-page-header {
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+}
+.upload-page-header-select {
+    width: 30%;
+    height: 100%;
+    background-color: #2f84d2;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.upload-page-header-select:hover {
+    cursor: pointer;
+}
+.upload-page-header-drag {
+    width: 70%;
+    height: 100%;
+    background-color: #404040;
+    color: white;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.upload-page-header-drag:hover {
+    cursor: pointer;
+}
+.upload-page-body {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
