image-editor-functionality

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -620,3 +620,14 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.top-toolbar{
+  display: none;
+}
+
+.left-toolbar{
+  height: 90vh!important;
+}
+
+.main-workboard{
+  height: 90vh!important;
+}
