--- a/client/src/components/workpages/FinalizePage.css
+++ b/client/src/components/workpages/FinalizePage.css
@@ -1,13 +1,16 @@
 .save-image{
     text-align: center;
-    display: flex;
     margin: 5px;
 }
 .save-button{
     border-radius: 5px;
     color: white;
+    width: fit-content;
     margin: 5px;
-    padding: 5px 10px;
+    padding: 0px 10px;
     background-color: #0284c7;
+}
+.save-button:hover{
     cursor: pointer;
+    background-color: rgba(0, 255, 255, 0.651);
 }
