--- a/client/src/index.css
+++ b/client/src/index.css
@@ -949,9 +949,10 @@ button {
 
 /* Landing Page */
 .landing {
-  position: relative;
-  background: url('./img/showcase.png') no-repeat center center/cover;
-  height: 1596px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('./img/showcase.png');
+  height: 100vh;
 }
 
 .landing-inner {
