--- a/client/src/components/workpages/ImagePagesStyle.css
+++ b/client/src/components/workpages/ImagePagesStyle.css
@@ -38,7 +38,7 @@
 }
 .download-3Dmockup-body {
     width: 100%;
-    height: 300px;
+    height: 270px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -282,4 +282,8 @@
 
 .image-card{
     padding: 5px!important;
+}
+
+.css-187mznn-MuiSlider-root{
+    padding-bottom: 0px!important;
 }
