--- a/client/src/components/workpages/MockupsPage.css
+++ b/client/src/components/workpages/MockupsPage.css
@@ -17,8 +17,8 @@
 }
 
 .image-card{
-    width: 150px!important;
-    height: auto!important;
+    width: 150px;
+    height: auto;
 }
 
 .image-card:hover{
